k8s-phonebook-project/web_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-deployment
  namespace: yavuz-namespace
  labels:
    app: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server 
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server
          image: yavuz69/phonebook-web-server
          ports:
          - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "100m"
            limits:
              memory: "750Mi"
              cpu: "750m"
