k8s-phonebook-project/mysql_service.yaml
apiVersion: v1
kind: Service   
metadata:
  name: web-mysql-svc
  namespace: yavuz-namespace
  labels:
    app: mysql
spec:
  type: ClusterIP  
  ports:
  - port: 3306 
    targetPort: 3306
  selector:
    app: mysql
