k8s-phonebook-project/result_server_service.yaml
apiVersion: v1
kind: Service   
metadata:
  name: result-scv
  namespace: yavuz-namespace
  labels:
    app: result-scv
spec:
  type: NodePort  
  ports:
  - port: 80 
    targetPort: 80
    nodePort: 30002
  selector:
    app: result-server
