k8s-phonebook-project/web_server_service.yaml
apiVersion: v1
kind: Service   
metadata:
  name: web-svc
  namespace: yavuz-namespace
  labels:
    app: web-svc
spec:
  type: NodePort  
  ports:
  - port: 80 
    targetPort: 80
    nodePort: 30001
  selector:
    app: web-server
