k8s-phonebook-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: yavuz-namespace
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-web
                port: 
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: svc-result
                port: 
                  number: 80
